Fix the bug where the 1st line of search results was only partly visible.

--- a/gramdictru/wwwroot/css/site.css
+++ b/gramdictru/wwwroot/css/site.css
@@ -116,7 +116,7 @@ body {
 /* PHONE */
 @media (max-width: 50em) {
     :root {
-        --search-bar-margin: 0;
+        --search-bar-margin: 0px;
     }
     
     .body-content {
